--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.1",
     "express-rate-limit": "^7.2.0",
+    "http-errors": "^2.0.0",
     "xss": "^1.0.15"
   },
   "devDependencies": {
