--- a/.prettierIgnore
+++ b/.prettierIgnore
@@ -1,15 +1,20 @@
-/.vscode
-/node_modules
-./dist
-./coverage
-./build
-./build/*
-./dist/*
-./coverage/*
-./node_modules/*
-./.vscode/*
-./.vscode
-*.env
+# Directories
+.vscode/
+.idea/
+node_modules/
+dist/
+coverage/
+build/
+public/
+
+# Files
 .env
 .env*
-
+.gitignore
+.DS_Store
+*.lock
+package.lock.json
+*.log
+*.log.*
+*.swp
+Thumbs.db
