--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.1",
     "express-rate-limit": "^7.2.0",
     "http-errors": "^2.0.0",
+    "mongoose": "^8.2.3",
     "xss": "^1.0.15"
   },
   "devDependencies": {
